# Zenodotus

./: README.md  pyproject.toml
api/: admin.py  models.py  serializers.py  views.py
api/management/commands/: bootstrap_types.py
api/migrations/: 0001_initial.py  0002_record_summary.py
templates/: index.html
zenodotus/: asgi.py  settings.py  urls.py  wsgi.py
